# energivanu2

./: .gitignore  BUG_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DEEP_DIVE_ANALYSIS.md  Dockerfile  Dockerfile.gpu  EXECUTION_MASTERPLAN.md  FINAL_STATUS.md  GAP_CLOSURE_PLAN.md  LICENSE  LICENSE-COMMERCIAL  MASTER_STRATEGY.md  MODEL_CARD.md  PROJECT_STATUS.md  README.md  SECURITY.md  TECHNICAL_DOCUMENTATION.md  VERIFICATION_REPORT.md  WEAKNESS_RESOLUTION_PLAN.md  WHITEPAPER.md  ZERO_BUDGET_MASTER_PLAN.md  docker-compose.yml  energivanu-gap-validation.py  fix_fonts.py  index.html  kernel-metadata.json  magazine.html  pyproject.toml  verify_claims.py  whitepaper.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: data_sources.yaml  default.yaml
data/: README.md
docs/: DATA_COLLECTION_GUIDE.md  LEGAL_FAQ.md  index.html
examples/: quickstart.py
kaggle/: 01_real_telemetry_collection.py  02_data_validation_and_training.py  04_full_gap_validation.py
magazine/: Energivanu_Insights_Magazine.docx  LEGAL_COMPLIANCE.md  build_docx.py  build_magazine.py  generate_charts.py
models/: results.json  results_alibaba.json
option-1-own-data/: PLAN.md
option-2-open-license/: DATASET_RESEARCH.md
option-3-dual-strategy/: STRATEGY.md
scripts/: check_compliance.py  collect_data.py  download_alibaba_data.py  export_onnx.py  pre-commit-hook.sh  run_full_validation.py
src/energivanu/: api.py  (+12 more)
tests/: test_api.py  test_bess.py  test_data.py  test_grid.py  test_model.py  test_mpc.py  test_onnx.py  test_optimizer.py  test_scheduler.py  test_telemetry.py
validation_output/: bess_simulation.json  grid_integration.json  mpc_simulation.json  real_telemetry.csv  validation_report.json
(+21 files in other folders)
